--- a/src/app/dashboard/modify/modifyusers/modifyusers.component.html
+++ b/src/app/dashboard/modify/modifyusers/modifyusers.component.html
@@ -1,31 +1,49 @@
-<!-- <div class="btn">
-
-  <a mat-flat-button color="accent" routerLinkActive="list-item-active" routerLink="../createperson"><mat-icon inline=true>done_all</mat-icon> CREAR</a>
-  <a mat-flat-button color="primary" routerLinkActive="list-item-active" routerLink="../modifyperson"><mat-icon inline=true>supervisor_account</mat-icon>MODIFICAR PER</a>
-  <a mat-flat-button color="primary" routerLinkActive="list-item-active" routerLink="../modifyusers"><mat-icon inline=true>border_color</mat-icon>MODIFICAR USU </a>
-</div>
- -->
-
 
 <mat-dialog-content [formGroup] = "form">
-  <h2 mat-dialog-title>MODIFICAR PERSONA</h2>
-   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"> 
+  <h2 mat-dialog-title>MODIFICAR USUARIO</h2>
+   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+
     <mat-form-field class="createUser" fxFlex>
+      <mat-label>Id Usuario</mat-label>
+
+        <input matInput placeholder = "Id Usuario" formControlName="idUser" readonly onmousedown="return false;">
+    </mat-form-field>
+
+
+    <!-- <mat-form-field class="createUser" fxFlex>
       <mat-label>Codigo Persona</mat-label>
-      
-        <input matInput placeholder = "Codigo de Usuario" formControlName="numeroDocumento" readonly onmousedown="return false;"> 
-    </mat-form-field> 
+
+        <input matInput placeholder = "Codigo de Usuario" formControlName="numeroDocumento" readonly onmousedown="return false;">
+    </mat-form-field> -->
+    <mat-form-field class="createUser" fxFlex>
+      <mat-label>Abreviatura</mat-label>
+        <input matInput placeholder = "Abreviatura" formControlName="abreviatura" readonly onmousedown="return false;">
+    </mat-form-field>
 
     <mat-form-field class="createUser" fxFlex>
+      <mat-label>Estado</mat-label>
+        <input matInput placeholder = "Estado" formControlName="estado">
+    </mat-form-field>
+
+    <!-- <mat-form-field class="createUser" fxFlex>
       <mat-label>Nombre Completo</mat-label>
-        <input matInput placeholder = "Nombre Completo" formControlName="nombreCompleto" readonly onmousedown="return false;"> 
+        <input matInput placeholder = "Nombre Completo" formControlName="nombreCompleto" readonly onmousedown="return false;">
+    </mat-form-field> -->
+
+    <mat-form-field fxFlex >
+      <mat-label class="label">Unidad Tecnica</mat-label>
+      <mat-select [(ngModel)]="selectedTecnica" formControlName="unidadTecnica">
+        <mat-option *ngFor="let unidadTecnica of unidadTecnicas" [value]="unidadTecnica">
+          {{unidadTecnica}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="createUser" fxFlex>
+    <!-- <mat-form-field class="createUser" fxFlex>
       <mat-label>Correo Electronico</mat-label>
-        <input matInput placeholder = "Correo Electronico" formControlName="correo"> 
-    </mat-form-field>
-    <mat-form-field fxFlex appearance="fill">
+        <input matInput placeholder = "Correo Electronico" formControlName="correo">
+    </mat-form-field> -->
+   <!--  <mat-form-field fxFlex >
       <mat-label class="label">Cargo</mat-label>
       <mat-select [(ngModel)]="selectedCargo" formControlName="cargo">
         <mat-option *ngFor="let cargo of cargos" [value]="cargo.id">
@@ -33,73 +51,87 @@
         </mat-option>
       </mat-select>
 
-    <!--  <input matInput placeholder="Cargo" formControlName="Cargo" > -->
 
-    </mat-form-field>
+    </mat-form-field> -->
      <!-- <mat-form-field class="createUser" fxFlex>
-        <input matInput placeholder = "cargo" formControlName="cargo"> 
+        <input matInput placeholder = "cargo" formControlName="cargo">
     </mat-form-field>  -->
   </div>
   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
     <!-- <mat-form-field class="createUser" fxFlex>
       <mat-label>Contraseña</mat-label>
-        <input matInput placeholder = "Contraseña" formControlName="Password"> 
+        <input matInput placeholder = "Contraseña" formControlName="Password">
     </mat-form-field> -->
-    <mat-form-field class="createUser" fxFlex>
+    <!-- <mat-form-field class="createUser" fxFlex>
       <mat-label>Unidad Organizacional</mat-label>
-      <input matInput placeholder = "Unidad Organizacional" formControlName="unidadOrganizacional"> 
+      <input matInput placeholder = "Unidad Organizacional" formControlName="unidadOrganizacional">
   </mat-form-field>
     <mat-form-field class="createUser" fxFlex>
       <mat-label>Sigla UO</mat-label>
-        <input matInput placeholder = "Sigla UO" formControlName="unidadOrganizacional"> 
+        <input matInput placeholder = "Sigla UO" formControlName="unidadOrganizacional">
+    </mat-form-field> -->
+    <mat-form-field fxFlex >
+      <mat-label class="label">Tipo Usuario</mat-label>
+      <mat-select [(ngModel)]="selectedUsuario" formControlName="tipoUsuario">
+        <mat-option *ngFor="let tipoUsuario of tipoUsuarios" [value]="tipoUsuario">
+          {{tipoUsuario}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+
+    <mat-form-field fxFlex >
+      <mat-label class="label">Perfil</mat-label>
+      <mat-select [(ngModel)]="selectedPerfil" formControlName="perfil">
+        <mat-option *ngFor="let perfil of perfiles" [value]="perfil">
+          {{perfil}}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
  </div>
   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-    <mat-form-field class="createUser" fxFlex>
+    <!-- <mat-form-field class="createUser" fxFlex>
       <mat-label>Empresa</mat-label>
           <mat-select>
             <mat-option value="" *ngFor="let empresa of empresas">
               {{empresa.name}}
           </mat-option>
           </mat-select>
-        <!-- <input matInput placeholder = "Empresa" formControlName="empresa">  -->
-    </mat-form-field>
+        -- <input matInput placeholder = "Empresa" formControlName="empresa">  -
+    </mat-form-field> -->
 
-    <mat-form-field class="createUser" fxFlex>
+<!--     <mat-form-field class="createUser" fxFlex>
      <mat-label>Gerencia</mat-label>
           <mat-select >
             <mat-option value="" *ngFor="let gerencia of gerencias">
               {{gerencia.name}}
           </mat-option>
           </mat-select>
-        <!-- <input matInput placeholder = "Gerencia" formControlName="gerencia">  -->
-    </mat-form-field>
 
-    <mat-form-field class="createUser" fxFlex>
+    </mat-form-field>
+ -->
+<!--     <mat-form-field class="createUser" fxFlex>
       <mat-label>Locacion</mat-label>
           <mat-select >
             <mat-option value="" *ngFor="let locacion of locaciones">
               {{locacion.name}}
           </mat-option>
           </mat-select>
-        <!-- <input matInput placeholder = "Locacion" formControlName="locacion">  -->
-    </mat-form-field>
+
+    </mat-form-field> -->
   </div>
   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-    <mat-form-field class="createUser" fxFlex>
+   <!--  <mat-form-field class="createUser" fxFlex>
       <mat-label>Sucursal</mat-label>
           <mat-select >
             <mat-option value="" *ngFor="let sucursal of sucursales">
               {{sucursal.name}}
           </mat-option>
           </mat-select>
-      <!--   <input matInput placeholder = "sucursal" formControlName="sucursal">  -->
-    </mat-form-field>
 
-    <mat-form-field class="createUser"fxFlex>
-        <input matInput placeholder = "NombreAprobador" formControlName="NombreAprobador"> 
-    </mat-form-field>
+    </mat-form-field> -->
+
   </div>
 </mat-dialog-content>
 
@@ -108,60 +140,6 @@
     <button class="btn1" mat-flat-button color="accent" (click) = "cerrar()">
       <mat-icon>cancel</mat-icon>Cancelar
     </button>
-    
-    <button  class="btn1"  mat-flat-button color="primary" (click) = "guardar()"><mat-icon>save</mat-icon>Modificar</button> 
+
+    <button  class="btn1"  mat-flat-button color="primary" (click) = "guardar()"><mat-icon>save</mat-icon>Modificar</button>
 </mat-dialog-actions>
-<!-- <div class="example-button-container">
-  
-</div> -->
-
-
-
-<!-- 
- <mat-card class="mat-elevation-z16" fxLayout="row wrap">
-  <mat-card-header >
-    <mat-card-title>MODIFY USER</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-  <form  (ngSubmit)="onSubmit()" [formGroup]="form"  fxLayoutGap="30px" fxLayoutGap.lt-md="0px">
-    <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-    <mat-form-field fxFlex>
-      <mat-label>Email</mat-label>
-      <input matInput  placeholder="Email" formControlName="Email">
-    </mat-form-field ><br>
-    <mat-form-field fxFlex>
-      <input matInput placeholder="Cargo" formControlName="Cargo">
-
-    </mat-form-field><br>
-  </div>
-    <mat-form-field >
-      <input matInput placeholder="UnidadOrg" formControlName="UnidadOrg">
-    </mat-form-field>
-    <br>
-
-    <mat-form-field >
-      <input matInput placeholder="Empresa" formControlName="Empresa">
-    </mat-form-field>
-    <br>
-
-    <mat-form-field >
-      <input matInput placeholder="Gerencia" formControlName="Gerencia">
-    </mat-form-field>
-    <br>
-
-    <mat-form-field >
-      <input matInput placeholder="Locacion" formControlName="Locacion">
-    </mat-form-field>
-    <br>
-
-    <mat-form-field >
-      <input matInput placeholder="Sucursal" formControlName="Sucursal">
-    </mat-form-field >
-    <br>
-    <button  mat-raised-button type="submit" [disabled]="form.invalid" color="primary">Enviar</button>
-    <button  mat-raised-button type="reset" color="warn">Limpiar</button>
-  </form>
-</mat-card-content>
-</mat-card>
-
- -->
