--- a/src/app/dashboard/modify/editperfil/editperfil.component.html
+++ b/src/app/dashboard/modify/editperfil/editperfil.component.html
@@ -33,7 +33,7 @@
             <mat-expansion-panel style="background-color: #D6EAF8;" >
                 <mat-expansion-panel-header fxLayoutAlign="center none" >
                     <mat-panel-title style="color: blue;" >
-                        RESETEAR CONTRASEÑA
+                        CAMBIAR CONTRASEÑA
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <app-password></app-password>
