--- a/src/app/dashboard/modify/modifyusers/modifyusers.component.html
+++ b/src/app/dashboard/modify/modifyusers/modifyusers.component.html
@@ -136,10 +136,11 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
- <!--    <button mat-raiset-button color="primary" (click) = "cerrar()">CERRAR</button> -->
+
     <button class="btn1" mat-flat-button color="accent" (click) = "cerrar()">
       <mat-icon>cancel</mat-icon>Cancelar
     </button>
 
     <button  class="btn1"  mat-flat-button color="primary" (click) = "guardar()"><mat-icon>save</mat-icon>Modificar</button>
+    <button class="btn2" mat-flat-button ><mat-icon>enhanced_encryption</mat-icon>RESETEAR CONTRASEÑA</button>
 </mat-dialog-actions>
