--- a/src/app/dashboard/modify/modifyusers/modifyusers.component.scss
+++ b/src/app/dashboard/modify/modifyusers/modifyusers.component.scss
@@ -19,15 +19,29 @@ mat-dialog-content{
 
 .btn1{
     font-family: helvetica;
-    
+
     font-size: 10px;
     font-style: italic;
-    
-    
+
+
     border-radius: 15px;
-  
+
 }
 
 .no-line {
   display: none;
+}
+
+.btn2{
+  background-color: #FFC300 ;
+  text-align: center;
+  font-family: helvetica;
+
+  font-size: 10px;
+  font-style: italic;
+  color: white;
+
+}
+.btn2:hover{
+  background-color: greenyellow;
 }
